# translate

./: .gitignore  CLIReadme.md  LICENSE  README.md  categorizer_prompt.txt  cleaning_prompt.txt  cli.py  config.py  database.py  db_backend.py  dedup_entities.py  directory_processor.py  entities.py  epub_processor.py  genres.json  genres.py  logger.py  output_formatter.py  pyproject.toml  reader_stats.py  requirements-apt.txt  requirements.txt  start_web.sh  sync_databases.py  system_prompt.txt  translate.py  translation_engine.py  translation_repair_prompt.txt  translator.py  ui.py  unit_converter.py  units.json
deploy/: apache2-reverse-proxy.conf  fictioneer-rest-meta.php  install-wp-plugin.sh  nginx-reverse-proxy.conf  t9.service  wordpress-setup.md
prompts/: chinese_xianxia.txt  japanese_ln.txt  korean_wn.txt
providers/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  models.json  openai_provider.py
web/: app.py  auth.py  requirements-web-apt.txt  requirements_web.txt
web/api/: activity_log_api.py  api_calls.py  books.py  dictionary_api.py  entities.py  health.py  public.py  queue_api.py  recommendations_admin.py  recommendations_public.py  settings_api.py  translation.py  wordpress_api.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: ChapterConflictPanel.jsx  ComboBox.jsx  DeleteEntityModal.jsx  DictLookup.jsx  EntityFormModal.jsx  EntityReviewPanel.jsx  GlobalSearchModal.jsx  JsonFixPanel.jsx  Layout.jsx  ReaderSearch.jsx  ReaderSettings.jsx  ReaderTOC.jsx  RecommendModal.jsx  RetroactiveReviewModal.jsx  SearchBar.jsx  TranslationProgress.jsx
web/frontend/src/hooks/: useAutoProcess.js  useLocalStorage.js  useReaderPrefs.js  useSearch.js  useUrlState.js
web/frontend/src/pages/: .Dashboard.jsx.swp  ApiCalls.jsx  ApiLogPage.jsx  BookDetail.jsx  Books.jsx  ChapterEditor.jsx  Dashboard.jsx  Entities.jsx  Help.jsx  Library.jsx  Login.jsx  NotFound.jsx  Queue.jsx  Reader.jsx  Recommendations.jsx  Settings.jsx
web/services/: job_manager.py  web_interface.py  wp_client.py
(+3 files in other folders)
